= ActiveMerchant CHANGELOG

* Moneris: Add optional (off by default) verification_value support [duff]
* Spreedly: Pass country with other address fields [hoenth]

== Version 1.38.1 (September 16, 2013)

* Moneris: Remove verification_value support [melari]

== Version 1.38.0 (September 6, 2013)

* FirstData E4: Include missing address information for AVS and CVV [melari]
* Litle: Deprecate credit method in favor of refund [melari]
* Moneris: Add verification_value support [duff]
* Webpay: Fixes issues with partial JPY currency [keikubo, melari]
* SecureNet: Add INVOICENUM and INVOICEDESC optional fields [duff]
* Balanced: Make BalancedGateway::Error inherit from ActiveMerchantError [duff]
* Balanced: Fix #void interface [duff]
* HiTrust: Return correct error message for positive retcodes [melari]
* Moving to pessimistic versioning [davefp]

== Version 1.37.0 (August 20, 2013)

* MerchantWarrior: Fix handling of amounts [duff]
* Ipay88: New gateway [kamal, siong1987, jduff]
* IATS: New gateway [unkown, jduff]
* MerchantWarrior: Send the CVV to the gateway [duff]
* PayU: Fix a major bug with status types [melari]
* SecureNet: Allow production transactions [duff]
* Stripe: Allow a card_not_present_fee to be specified [melari]

== Version 1.36.0 (August 2, 2013)

* Fat Zebra: More consistent handling of tokens [adrianmacneil]
* Add Platron integration [alexwl]
* Litle: Support wiredump_device [pierre]
* Litle: support paypage registrations [pierre]
* SecureNet: Cleanup and refactoring [duff]
* Mercury: Proper refund and void support [opendining]
* PaymentExpress: Return token in authorization [ntalbott]
* Stripe: Support for partial application fee refunds [melari, odorcicd]
* NMI: Support for recurring flag [duff]
* SecureNet: Use working live url [duff]

== Version 1.35.1 (July 22, 2013)

* Stripe: Allow application_fees to be refunded via the refund_application_fee flag [melari]

== Version 1.35.0 (July 17, 2013)

* Add Barclays ePDQ Extra Plus gateway [ntalbott]